2001-08-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tcltest.test (tcltest-12.2): fixed test that would break
	when env vars weren't Tcl list friendly [Patch #454046] (stanton)

2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (geturl): added port number to Host:
	header to comply with HTTP/1.1 spec (RFC 2068).  [Bug #452217]

2001-08-16  David Gravereaux <davygrvy@pobox.com>

	* tools/tcl.wse.in:
	* tools/tcl.hpj.in:
	* win/tcl.hpj.in:  Removed -kb storage in CVS to ensure these text
	files are checked-out in the translation mode CVS is in.  Setting
	these as binary as part of an effort to make sure they are always
	in CRLF, no matter what the CVS translation, is bypassing how CVS
	works and is confusing.

	* tools/genStubs.tcl:  Removed LF-only output.  Having to reconvert
	back to CRLF before committing to CVS was giving me a headache.
	[Bug: 451333]

	* win/makefile.vc: replaced $(WINDIR) with $(include32) for the
	.rc.res inference rule.  winver.h wasn't getting included.
	[Bug: 445630]

2001-08-14  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c: make the intial maxNestingDepth of an
	interpreter be MAX_NESTING_DEPTH instead of a hardwired value
	[Bug: 232564]

2001-08-13  Miguel Sofer  <msofer@users.sourceforge.net>

	* tests/trace.test: Corrected test numbers [Bug: 449794] 

2001-08-12  Mo DeJong  <mdejong@redhat.com>

	* unix/configure: Regen.
	* unix/configure.in:
	* unix/tcl.m4: Use GCC variable set by AC_PROG_CC instead
	of defining our own using_gcc variable.

2001-08-11  Vince Darley <vincentdarley@users.sourceforge.net>

        Variety of small issues introduced by the vfs code fixed:
	* generic/tclIOUtil.c: uninitialised read.
	* generic/tclFCmd.c: possible memory leak in file delete 
	with error condition.

2001-08-10  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclVar.c: 
	* tests/trace.test: Insure that [array] traces work correctly for
	undefined variables [Bug: 449094] 
