@@ -1,4 +1,4 @@
-# This file contains tests for the file tclCompile.c.
+# This file contains tests for the files tclCompile.c and tclCompCmds.c
 #
 # This file contains a collection of tests for one or more of the Tcl
 # built-in commands.  Sourcing this file into Tcl runs the tests and
@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: compile.test,v 1.9 2000/05/03 00:14:36 hobbs Exp $
+# RCS: @(#) $Id: compile.test,v 1.10 2001/08/22 13:57:53 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -89,6 +89,14 @@ test compile-3.2 {TclCompileCatchCmd: non-local variables} {
     catch-test
     set ::foo
 } 3
+test compile-3.3 {TclCompileCatchCmd: overagressive compiling [bug 219184]} {
+    proc catch-test {str} {
+	catch [eval $str GOOD]
+	error BAD
+    }
+    catch {catch-test error} ::foo
+    set ::foo
+} {GOOD}
 
 test compile-4.1 {TclCompileForCmd: command substituted test expression} {
     set i 0
